[package]
name = "test_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.11"
pixels = "0.7"
winit = "0.25"
nalgebra = "0.32"
rand = "0.8.5"
log = "0.4.20"
env_logger = "0.11.1"
colored = "2.1"